--- a/css/view-post.css
+++ b/css/view-post.css
@@ -66,19 +66,25 @@ button:hover{
 .dashboard{
     margin-left: 285px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    padding-top: 70px;
+    padding:50px;
     border-radius: 10px;
 }
 
 .box{
     padding:20px;
     display: inline-block;
-    height: 300px;
+    height: 500px;
     
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    position: relative;
 }
 
 .box1{
-    width: 45%;
+    width: 22.5%;
+   
+    padding: 10%
+
     
     
 }
@@ -95,4 +101,61 @@ button:hover{
 }
 
 
+.post-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 340px;
+    width: 340px;
+    padding: 20px;
+    border-radius: 10%;
+
+}
+.post-name{
+    position: absolute;
+    bottom: 120px;
+    left: 30px;
+}
+.fav {
+    position: absolute;
+    top:24px;
+    right: 26px;
+}
+.btns{
+    position: absolute;
+    bottom: 75px;
+    right: 10px;
+}
+.new{
+    position: absolute;
+    bottom: 140px;
+    left: 130px;
+}
+.post-date{
+   position:relative;
+}
+.date{
+  position: absolute;
+  right: 1px;
+  
+  
+  background-color: white;
+    
+}
+
+
+
+.btn-connect{
+    position:relative;
+    bottom: 20px;
+}
+.green{
+    position: absolute;
+    left: 10px;
+}
+
+.blue{
+    position: absolute;
+    left: 90px;
+}
 
