--- a/css/view-post.css
+++ b/css/view-post.css
@@ -19,6 +19,10 @@
     width:100%;
     height: 85px;
 }
+.navbar img{
+    background-color: rgba(163, 5, 5, 0.315);
+    
+}
 .sidebar-link{
     text-decoration: none;
     display: inline-block;
@@ -66,15 +70,16 @@ button:hover{
 .dashboard{
     margin-left: 285px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    padding:50px;
+    padding: 50px;
     border-radius: 10px;
+    
 }
 
 .box{
-    padding:20px;
+    padding:10px;
     display: inline-block;
     height: 500px;
-    
+   
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     position: relative;
@@ -125,7 +130,15 @@ button:hover{
     position: absolute;
     bottom: 75px;
     right: 10px;
+   
 }
+.post-btn:hover{
+    background-color:rgba(128, 128, 128, 0.178),transparent;
+    color: black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+    
+
 .new{
     position: absolute;
     bottom: 140px;
@@ -148,7 +161,16 @@ button:hover{
 .btn-connect{
     position:relative;
     bottom: 20px;
+    
 }
+
+.btn-connect:hover{
+     background-color: rgba(128, 128, 128, 0.178),transparent;
+    color: black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+}
+
 .green{
     position: absolute;
     left: 10px;
