--- a/css/view-post.css
+++ b/css/view-post.css
@@ -18,6 +18,7 @@
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     width:100%;
     height: 85px;
+     position: fixed;
 }
 .navbar img{
     background-color: rgba(163, 5, 5, 0.315);
@@ -83,6 +84,8 @@ button:hover{
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     position: relative;
+    margin-top: 75px;
+    margin-right: 30px;
 }
 
 .box1{
@@ -135,6 +138,10 @@ button:hover{
 .post-btn:hover{
     background-color:rgba(128, 128, 128, 0.178),transparent;
     color: black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.post-btn.fav:hover{
+    background-color: aliceblue;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
     
