--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     width:100%;
     height: 85px;
+    position: fixed;
+}
+.navbar img{
+    background-color: rgba(163, 5, 5, 0.315);
+    
 }
 .sidebar-link{
     text-decoration: none;
@@ -71,10 +76,10 @@ button:hover{
 }
 
 .box{
-    padding:20px;
+    padding:50px;
     display: inline-block;
     height: 300px;
-    
+    margin-top: 56px;
 }
 
 .box1{
@@ -87,6 +92,7 @@ button:hover{
 }
 .box3{
     width: 100%;
+    margin-top:10px ;
 }
 .b{
     background-color: grey;
