--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     width:100%;
     height: 85px;
-     position: fixed;
-     z-index: 10;
+    position: fixed;
+    z-index: 10;
       backdrop-filter: blur(10px);
 }
 .navbar img{
@@ -73,28 +73,20 @@ button:hover{
 .dashboard{
     margin-left: 285px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    padding: 50px;
+    padding-top: 70px;
     border-radius: 10px;
    
 }
 
 .box{
-    padding:10px;
+    padding:50px;
     display: inline-block;
-    height: 500px;
-   
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    position: relative;
-    margin-top: 75px;
-    margin-right: 30px;
+    height: 300px;
+    margin-top: 56px;
 }
 
 .box1{
-    width: 22.5%;
-   
-    padding: 10%
-
+    width: 45%;
     
     
 }
@@ -103,6 +95,7 @@ button:hover{
 }
 .box3{
     width: 100%;
+    margin-top:10px ;
 }
 .b{
     background-color: grey;
@@ -111,82 +104,4 @@ button:hover{
 }
 
 
-.post-img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 340px;
-    width: 340px;
-    padding: 20px;
-    border-radius: 10%;
-
-}
-.post-name{
-    position: absolute;
-    bottom: 120px;
-    left: 30px;
-}
-.fav {
-    position: absolute;
-    top:24px;
-    right: 26px;
-}
-.btns{
-    position: absolute;
-    bottom: 75px;
-    right: 10px;
-   
-}
-.post-btn:hover{
-    background-color:rgba(128, 128, 128, 0.178),transparent;
-    color: black;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
-.post-btn.fav:hover{
-    background-color: aliceblue;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
-    
-
-.new{
-    position: absolute;
-    bottom: 140px;
-    left: 130px;
-}
-.post-date{
-   position:relative;
-}
-.date{
-  position: absolute;
-  right: 1px;
-  
-  
-  background-color: white;
-    
-}
-
-
-
-.btn-connect{
-    position:relative;
-    bottom: 20px;
-    
-}
-
-.btn-connect:hover{
-     background-color: rgba(128, 128, 128, 0.178),transparent;
-    color: black;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-
-}
-
-.green{
-    position: absolute;
-    left: 10px;
-}
-
-.blue{
-    position: absolute;
-    left: 90px;
-}
 
